Polish HealthHud.java